--- a/oh-package.json5
+++ b/oh-package.json5
@@ -8,5 +8,7 @@
   "description": "Please describe the basic information.",
   "main": "",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {
+    "@mcui/mccharts": "^1.0.2"
+  }
 }
