--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -32,6 +32,23 @@
           }
         ]
       }
+    ],
+    "requestPermissions": [
+      {
+        "name": 'ohos.permission.DISCOVER_BLUETOOTH'
+      },
+      {
+        "name": 'ohos.permission.USE_BLUETOOTH'
+      },
+      {
+        "name": 'ohos.permission.LOCATION'
+      },
+      {
+        "name": 'ohos.permission.APPROXIMATELY_LOCATION'
+      },
+      {
+        "name": 'ohos.permission.GET_WIFI_INFO'
+      }
     ]
   }
 }
