用户登陆及推出，保持登陆状态

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -48,6 +48,9 @@
       },
       {
         "name": 'ohos.permission.GET_WIFI_INFO'
+      },
+      {
+        "name": 'ohos.permission.INTERNET'
       }
     ]
   }
