调整部分UI，完成服务卡片，发送命令按钮

--- a/entry/src/main/resources/base/profile/form_config.json
+++ b/entry/src/main/resources/base/profile/form_config.json
@@ -2,7 +2,7 @@
   "forms": [
     {
       "name": "widget",
-      "description": "This is a service widget.",
+      "description": "云瓶",
       "src": "./ets/widget/pages/WidgetCard.ets",
       "uiSyntax": "arkts",
       "window": {
